Worked on testing integration and flash notice on homepage (redirect to home)

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -18,8 +18,8 @@
     <%= form.text_field :author %>
     <%= form.label :price %>
     <%= form.text_field :price %>
-    <%= form.label :publishedDate %>
-    <%= form.date_field :publishedDate %>
+    <%= form.label :published_date %>
+    <%= form.date_field :published_date %>
   </div>
 
   <div class="actions">
