--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,7 +25,7 @@
         <th colspan="3"></th>
         <td><%= book.price %></td>
         <th colspan="3"></th>
-        <td><%= book.publishedDate %></td>
+        <td><%= book.published_date %></td>
         <th colspan="3"></th>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
