--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,7 @@
   <%= @book.price %>
   <br></br>
   <strong>Published Date:</strong>
-  <%= @book.publishedDate %>
+  <%= @book.published_date %>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
