--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,7 +29,7 @@
         <th colspan="3"></th>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', delete_book_path(book) %></td>
+        <td><%= link_to 'Delete', delete_book_path(book) %></td>
       </tr>
     <% end %>
   </tbody>
